medication-tracker/kubernetes/beta/beta-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-beta
  namespace: beta
spec:
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: postgres-beta
  clusterIP: None
