medication-tracker/kubernetes/beta/beta-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medication-tracker-beta
  namespace: beta
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: medication-tracker-beta
