medication-tracker/kubernetes/beta/beta-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medication-tracker-beta-ingress
  namespace: beta
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - beta.medicationtracker.com
    secretName: beta-tls-secret
  rules:
  - host: beta.medicationtracker.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: medication-tracker-beta
            port:
              number: 80
